--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "http": "0.0.0",
+    "node-mysql": "^0.4.2",
     "querystring": "^0.2.0"
   }
 }
